# ChangeLog for calc-extension:

*calc-1.0:
	Martin Väth <martin at mvath.de>:
	- Introduce option to change between textarea/button (new default) or
	  input element (previously only way)
	- Do not use several number formats for output. Instead:
	- Introduce "..." special to set output base
	- Increase width of textareas/input elements to 60. Moreover:
	- Introduce '...' special to set default size of new textareas and to
	  change size of all previous input elements.
	- For all above, see https://github.com/vaeth/calc-extension/issues/1
	- Typo fixes in German translation

*calc-0.2:
	Martin Väth <martin at mvath.de>:
	- Provide brief description on top of page
	- Output in hexadecimal and octal only if number is larger than 7
	- Rename to calc-extension (calc was already used by legacy extension)
	- Update homepage address
	- Improve error messages for # and unexpected end = incomplete
	- Refer to # as "last" result (instead of "previous")
	- Simplify background.js

*calc-0.1:
	Martin Väth <martin at mvath.de>:
	- Initial implementation